tests/NormalTests/paczka1/fuzzy1/67871377.err
Error in line 4: IxPmzhZ A570 260,5
Error in line 10: nWj0 S468 20,4
Error in line 9: IxPmzhZ A202 62,6
Error in line 20: dfKESszaSmP S468 90,3
Error in line 16: FrV8yxE A202 9,9
